src/objects/IgnitionOn__c.object
<CustomObject>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Driver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IgnitionOn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>IgnitionOn</relationshipLabel>
        <relationshipName>IgnitionOn</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>IgnitionOn</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IGON{0}</displayFormat>
        <label>IgnOn Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IgnitionOn</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>